kiki/src/examples/should_fail/undefined_child_terminal.kiki
start Foo

struct Foo($Baz)

terminal Token {
    $Ident: String
}
